--- a/HW1/HW1.html
+++ b/HW1/HW1.html
@@ -110,7 +110,7 @@
 
                 <summary onclick="showDialog()">Order Form</summary>
                 <dialog open>
-                    This section will only work after HW2!
+                    This section will work only after HW2!
                 </dialog>
                 <hr>
                 <form>
@@ -159,7 +159,7 @@
                     </fieldset>
      
                     <fieldset>
-                        <input type="button" value="cancel"><input type="button" value="order">
+                        <input type="button" value="Cancel"><input type="button" value="Order">
                     </fieldset>
 
                 </form>
@@ -173,7 +173,7 @@
             <ul>
                 <li>Your order will leave warehouse in 3-5 days</li>
                 <li>If you have any question please contact us at 123456789</li>
-                <li>D&W is a proud supporter of the <em>Stuart collection</em></li>
+                <li>D&W is a proud supporter of the <em>Stuart Ｃollection</em></li>
             </ul>
             <address><i>9500 Gilman Dr, La Jolla, CA 92093</i></address>
         </footer>
