--- a/HW1/HW1.html
+++ b/HW1/HW1.html
@@ -16,9 +16,9 @@
     <main>
         <section>
             <div class="grid-container">
-                <div class="grid-item" id="grid-text">Dingus</div>
-                <div class="grid-item" id="grid-text">Widget</div>
-                <div class="grid-item" id="grid-text">Sales</div>   
+                <div class="grid-item" id="grid-text"><h3>Dingus</h3></div>
+                <div class="grid-item" id="grid-text"><h3>Widget</h3></div>
+                <div class="grid-item" id="grid-text"><h3>Sales</h3></div>   
                 
                 <div class="grid-item" id="grid-number-1">0</div>
                 <div class="grid-item" id="grid-number-2">0</div>
