--- a/HW1/HW1.html
+++ b/HW1/HW1.html
@@ -108,7 +108,7 @@
                 <script src="resources/scripts/hw1.js"></script>
                 <script>showDialog()</script>
 
-                <summary onclick="showDialog()">Order Form</summary>
+                <summary onclick="showDialog()"><b>Order Form</b></summary>
                 <dialog open>
                     This section will work only after HW2!
                 </dialog>
@@ -159,7 +159,7 @@
                     </fieldset>
      
                     <fieldset>
-                        <input type="button" value="Cancel"><input type="button" value="Order">
+                        <input type="button" value="Cancel" disabled><input type="button" value="Order" disabled>
                     </fieldset>
 
                 </form>
@@ -173,7 +173,7 @@
             <ul>
                 <li>Your order will leave warehouse in 3-5 days</li>
                 <li>If you have any question please contact us at 123456789</li>
-                <li>D&W is a proud supporter of the <em>Stuart Ｃollection</em></li>
+                <li>D&W is a proud supporter of the <em>Stuart Collection</em></li>
             </ul>
             <address><i>9500 Gilman Dr, La Jolla, CA 92093</i></address>
         </footer>
